// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment empty global prisma rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-us1",
  },
]
`;

exports[`Environment interpolates env vars 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-us1",
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-us1",
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 2`] = `undefined`;

exports[`Environment non-existent global prisma rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-us1",
  },
]
`;

exports[`Environment persists .prisma correctly 1`] = `
"clusters:
  cluster:
    host: 'http://localhost:60000'
    clusterSecret: ''
"
`;

exports[`Environment persists .prisma correctly 2`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-us1",
  },
  Cluster {
    "baseUrl": "http://localhost:60000",
    "clusterSecret": "",
    "local": true,
    "name": "cluster",
  },
]
`;

exports[`Environment sets the platform token correctly 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "prisma-us1",
  },
]
`;
